# apidrift

./: .gitignore  Cargo.toml  LICENSE  MATCHER_README.md  README.md  RULES_ARCHITECTURE.md  dist-workspace.toml  install.sh
.github/workflows/: auto-release.yml  ci.yml  release.yml
examples/: test_matcher.rs
src/: lib.rs  main.rs  matcher.rs  render.rs  rules.rs
src/render/: html.rs
src/rules/: route.rs  schema.rs
templates/: report.html
templates/components/: base_styles.html  grouped_changes.html  header.html  help.html  routes.html  schemas.html  scripts.html  stats.html
tests/: base_test_schema.json  current_test_schema.json  matcher_tests.rs  route_rules_tests.rs
