[package]
name = "apidrift"
version = "0.1.1"
edition = "2021"
authors = ["sensiarion <izertmi@gmail.com>"]
license = "Apache-2.0"
description = "A tool to compare OpenAPI specifications and detect breaking changes"
repository = "https://github.com/sensiarion/apidrift"
homepage = "https://github.com/sensiarion/apidrift"
keywords = ["apidrift", "openapi", "api", "diff", "breaking-changes", "swagger"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
oas3 = { version = "0.19.0", features = ["yaml-spec"] }
serde_json = "1.0"
tera = "1.20"
serde = { version = "1.0", features = ["derive"] }
open = "5.0"
clap = { version = "4.5", features = ["derive"] }
